// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PhoneViewer/> displays a formatted non-us number 1`] = `
<span
  className="container"
>
  +
  30
   
  212 2212122
</span>
`;

exports[`<PhoneViewer/> displays a formatted us number 1`] = `
<span
  className="container"
>
  +
  1
   
  (123) 123-1234
</span>
`;
